<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  tools:showIn="navigation_view">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/main_menu_button"
      android:icon="@drawable/ic_main_menu"
      android:title="@string/return_to_main_menu"/>

    <item
      android:id="@+id/play_button"
      android:icon="@drawable/ic_menu_send"
      android:title="Play Fragment"/>
    <item
      android:id="@+id/scroreboard_button"
      android:icon="@drawable/ic_scoreboard_board"
      android:title="Score Board Fragment"/>
    <item
      android:id="@+id/help_button"
      android:icon="@drawable/ic_help_arrow"
      android:title="Help Fragment"/>
  </group>


</menu>
