<resources>
  <string name="app_name">MathMurderMystery</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Welcome to Math Murder Mystery</string>
  <string name="nav_header_subtitle">Username</string>
  <string name="nav_header_subtitle2">Users Score</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">History</string>
  <string name="play_fragment">Would you like to start a new game, or continue?</string>
  <string name="new_game">Start a new game</string>
  <string name="continue_game">Continue game</string>
  <string name="return_to_main_menu">Main Menu</string>


  <string name="welcome_string">Welcome to Math Murder Mystery!</string>
  <string name="scoreboard_welcome">Welcome to the Scoreboard</string>
  <string name="help_user">How can I help you?</string>
  <string name="new_level">New Level</string>
  <string name="new_room">New room</string>
  <string name="new_room_game">Beginning of new game</string>
  <string name="new_scenario">Scenarios</string>
  <string name="new_problem_game">Go to Problems!</string>
  <string name="Problems">problems</string>
  <string name="New">new</string>
  <string name="true_button">True</string>
  <string name="false_button">False</string>
  <string name="button_A">button_A</string>
  <string name="start_new_game_button">New Game</string>
</resources>
