<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/activity_quiz"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
...
    android:layout_height="wrap_content"
    android:text="bird"
    android:background="#0091EA"
    android:textColor="#fff"
    android:padding="8dp"
    android:layout_marginBottom="24dp"
    android:id="@+id/choice1"/>

  <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="door"
    android:background="#0091EA"
...
