<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#0022ff"
android:gravity="center"
android:orientation="vertical">


<Button
  android:id="@+id/new_go_to_problems"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginBottom="24dp"
  android:layout_marginLeft="8dp"
  android:layout_marginRight="8dp"
  android:background="#616161"
  android:text="@string/Problems"
  android:textColor="#830303"
  android:textSize="24sp"
  tools:padding="24dp"/>


</LinearLayout>